--- a/fzycomcase/fzycomcase_summary.html
+++ b/fzycomcase/fzycomcase_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>fzycomcase Project Status (07/07/2016 - 17:48:05)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>fzycomcase Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>fzycomcase.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>fzycomcase</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Synthesized (Failed)</TD>
+<TD>Synthesized</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -76,9 +76,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/VHDL/VHDL/fzycomcase\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>周四 7月 7 19:08:47 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/VHDL/VHDL/fzycomcase\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 7月 7 21:03:14 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 07/07/2016 - 19:23:26</center>
+<br><center><b>Date Generated:</b> 07/08/2016 - 08:12:33</center>
 </BODY><
